// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Platform API: pullDownRefresh Test container: web 1`] = `
<body>
  <div
    id="__universal_pulldownrefresh_refresh"
    style="position: relative; width: 100%; height: 50px; text-align: center; display: flex; flex-wrap: row; align-items: center; justify-content: center; z-index: 9999;"
  >
    <img
      id="__universal_pulldownrefresh_refreshLoadingImg"
      src="https://gw.alicdn.com/imgextra/i4/O1CN01X5Adob1J0TGk79HNn_!!6000000000966-1-tps-400-400.gif"
      style="height: 16px; width: 16px; margin-right: 10px; color: rgb(153, 153, 153);"
    />
    <div
      id="__universal_pulldownrefresh_refreshText"
      style="font-size: 14px; color: rgb(153, 153, 153);"
    >
      更新中...
    </div>
  </div>
</body>
`;

exports[`Test Platform API: pullDownRefresh Test container: web 2`] = `<body />`;

exports[`Test Platform API: pullDownRefresh Test container: web 3`] = `
<body>
  <div
    id="__universal_pulldownrefresh_refresh"
    style="position: relative; width: 100%; height: 50px; text-align: center; display: flex; flex-wrap: row; align-items: center; justify-content: center; z-index: 9999;"
  >
    <div
      id="__universal_pulldownrefresh_refreshText"
      style="font-size: 14px; color: rgb(153, 153, 153);"
    >
      下拉刷新
    </div>
  </div>
</body>
`;

exports[`Test Platform API: pullDownRefresh Test container: web 4`] = `
<body>
  <div
    id="__universal_pulldownrefresh_refresh"
    style="position: relative; width: 100%; height: 50px; text-align: center; display: flex; flex-wrap: row; align-items: center; justify-content: center; z-index: 9999;"
  >
    <div
      id="__universal_pulldownrefresh_refreshText"
      style="font-size: 14px; color: rgb(153, 153, 153);"
    >
      下拉刷新
    </div>
  </div>
</body>
`;

exports[`Test Platform API: pullDownRefresh Test container: web 5`] = `
<body>
  <div
    id="__universal_pulldownrefresh_refresh"
    style="position: relative; width: 100%; height: 50px; text-align: center; display: flex; flex-wrap: row; align-items: center; justify-content: center; z-index: 9999;"
  >
    <img
      id="__universal_pulldownrefresh_refreshLoadingImg"
      src="https://gw.alicdn.com/imgextra/i4/O1CN01X5Adob1J0TGk79HNn_!!6000000000966-1-tps-400-400.gif"
      style="height: 16px; width: 16px; margin-right: 10px; color: rgb(153, 153, 153);"
    />
    <div
      id="__universal_pulldownrefresh_refreshText"
      style="font-size: 14px; color: rgb(153, 153, 153);"
    >
      更新中...
    </div>
  </div>
</body>
`;
